--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name seopost.net ;
+    server_name exampel.com;
    
      location /.well-known/acme-challenge/ {
         root /var/www/certbot;
